@@ -127,7 +127,7 @@ add_subdirectory(util)
 add_subdirectory(unicode)
 
 # Packaging stuff
-if (NOT ANDROID_NDK_TOOLCHAIN_INCLUDED)
+if (UNIX AND NOT APPLE AND NOT ANDROID_NDK_TOOLCHAIN_INCLUDED)
     set(CPACK_OUTPUT_FILE_PREFIX packages)
     set(CPACK_DEB_COMPONENT_INSTALL ON)
     set(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
@@ -172,4 +172,4 @@ if (NOT ANDROID_NDK_TOOLCHAIN_INCLUDED)
     cpack_add_component(cgrapenlp REQUIRED)
     cpack_add_component(libgrapenlpdev DISABLED)
     cpack_add_component(libjgrapenlp DISABLED)
-endif (NOT ANDROID_NDK_TOOLCHAIN_INCLUDED)
+endif (UNIX AND NOT APPLE AND NOT ANDROID_NDK_TOOLCHAIN_INCLUDED)
